JDK9 support for delombok (and thus, for running the tests under JDK9).